# python-udsonip

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  NAMING.md  README.md  SUMMARY.md  pyproject.toml  setup.py
docs/: client.rst  conf.py  connection.rst  discovery.rst  exceptions.rst  index.rst  manager.rst  multi_ecu.rst
examples/: 01_basic_single_ecu.py  02_multi_ecu.py  03_dynamic_switching.py  04_discovery.py
tests/: test_client.py  test_connection.py  test_discovery.py  test_exceptions.py  test_manager.py  test_multi_ecu.py
udsonip/: __init__.py  client.py  connection.py  discovery.py  exceptions.py  manager.py  multi_ecu.py
