[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "udsonip"
version = "0.1.0"
description = "Enhanced DoIP-UDS integration library providing seamless multi-ECU support"
readme = "README.md"
authors = [
    {name = "Sirius Wu", email = "ccwu660601@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["doip", "uds", "automotive", "diagnostics", "iso13400", "iso14229"]
requires-python = ">=3.7"
dependencies = [
    "doipclient>=1.1.7",
    "python-udsoncan>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/sirius-cc-wu/python-udsonip"
Documentation = "https://python-udsonip.readthedocs.io"
Repository = "https://github.com/sirius-cc-wu/python-udsonip"
Issues = "https://github.com/sirius-cc-wu/python-udsonip/issues"

[tool.setuptools]
packages = ["udsonip"]

[tool.setuptools.package-data]
udsonip = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=udsonip --cov-report=term-missing"
